--- a/showcase/public/index.html
+++ b/showcase/public/index.html
@@ -52,7 +52,7 @@
         <div class="px-0">
           <div class="container text-center z-index-1"><img class="mb-7" src="assets/img/hero/final.png" alt="" />
             <h2 class="text-300 fw-semi-bold fs-2 mb-1">HTML5 Template Collection 2022</h2>
-            <h2 class="text-white fw-bold fs-5 mb-0">100 Pre-build Websites</h2><a class="text-white btn btn-success mt-3 mb-5"><i class="fas fa-download me-3"></i>Download Free</a>
+            <h2 class="text-white fw-bold fs-5 mb-0">100 Pre-build Websites</h2><a class="text-white btn btn-success mt-3 mb-5" href="https://themewagon.com/themes/template-collection-2022-one-hundred-free-html5-templates-in-one-bundle/" target="_blank"><i class="fas fa-download me-3"></i>Download Free</a>
           </div>
           <div class="z-index-1 w-100 position-absolute bottom-0">
             <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1920 141" fill="none">
@@ -72,7 +72,8 @@
               </defs>
             </svg>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -119,7 +120,7 @@
                   <p class="card-text text-dark">Admin &amp; DashBoard</p><img class="card-img-bottom" src="assets/img/template/img12.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item multipurpose "><a class="text-decoration-none" href="https://technext.github.io/applab_2/v1.0.0/" data-category="multipurpose ">
+            <div class="col-lg-4 col-6 mb-3 item multipurpose"><a class="text-decoration-none" href="https://technext.github.io/applab_2/v1.0.0/" data-category="multipurpose">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">AppLab</h5>
                   <p class="card-text text-dark">Multipurpose </p><img class="card-img-bottom" src="assets/img/template/img10.png" alt="Feature" />
@@ -131,7 +132,7 @@
                   <p class="card-text text-dark">Travel &amp; Booking</p><img class="card-img-bottom" src="assets/img/template/img05.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item multipurpose "><a class="text-decoration-none" href="https://technext.github.io/LaslesVPN/v1.0.0/" data-category="multipurpose ">
+            <div class="col-lg-4 col-6 mb-3 item multipurpose"><a class="text-decoration-none" href="https://technext.github.io/LaslesVPN/v1.0.0/" data-category="multipurpose">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">LaslesVPN</h5>
                   <p class="card-text text-dark">Multipurpose </p><img class="card-img-bottom" src="assets/img/template/img07.png" alt="Feature" />
@@ -179,7 +180,7 @@
                   <p class="card-text text-dark">E-commerce</p><img class="card-img-bottom" src="assets/img/template/img03.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item multipurpose "><a class="text-decoration-none" href="https://technext.github.io/titan/" data-category="multipurpose ">
+            <div class="col-lg-4 col-6 mb-3 item multipurpose"><a class="text-decoration-none" href="https://technext.github.io/titan/" data-category="multipurpose">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Titan</h5>
                   <p class="card-text text-dark">Multipurpose </p><img class="card-img-bottom" src="assets/img/template/img04.png" alt="Feature" />
@@ -323,13 +324,13 @@
                   <p class="card-text text-dark">Admin &amp; Dashboard</p><img class="card-img-bottom" src="assets/img/template/img34.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item ecommerce "><a class="text-decoration-none" href="https://technext.github.io/majestic-2/v1.0.1/" data-category="ecommerce ">
+            <div class="col-lg-4 col-6 mb-3 item ecommerce"><a class="text-decoration-none" href="https://technext.github.io/majestic-2/v1.0.1/" data-category="ecommerce">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Majestic </h5>
                   <p class="card-text text-dark">E-Commerce </p><img class="card-img-bottom" src="assets/img/template/img35.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item ecommerce "><a class="text-decoration-none" href="https://technext.github.io/winkel/index.html" data-category="ecommerce ">
+            <div class="col-lg-4 col-6 mb-3 item ecommerce"><a class="text-decoration-none" href="https://technext.github.io/winkel/index.html" data-category="ecommerce">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Winkel</h5>
                   <p class="card-text text-dark">E-Commerce </p><img class="card-img-bottom" src="assets/img/template/img36.png" alt="Feature" />
@@ -557,7 +558,7 @@
                   <p class="card-text text-dark">other</p><img class="card-img-bottom" src="assets/img/template/img76.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item photography "><a class="text-decoration-none" href="https://technext.github.io/rettro/index.html" data-category="photography ">
+            <div class="col-lg-4 col-6 mb-3 item photography"><a class="text-decoration-none" href="https://technext.github.io/rettro/index.html" data-category="photography">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Rettro</h5>
                   <p class="card-text text-dark">Photography </p><img class="card-img-bottom" src="assets/img/template/img77.png" alt="Feature" />
@@ -695,20 +696,21 @@
                   <p class="card-text text-dark">Travel &amp; Booking</p><img class="card-img-bottom" src="assets/img/template/img98.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item photography "><a class="text-decoration-none" href="https://technext.github.io/studio/" data-category="photography ">
+            <div class="col-lg-4 col-6 mb-3 item photography"><a class="text-decoration-none" href="https://technext.github.io/studio/" data-category="photography">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Studio</h5>
                   <p class="card-text text-dark">Photography </p><img class="card-img-bottom" src="assets/img/template/img99.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item other "><a class="text-decoration-none" href="https://technext.github.io/newsbox/index.html" data-category="other ">
+            <div class="col-lg-4 col-6 mb-3 item other"><a class="text-decoration-none" href="https://technext.github.io/newsbox/index.html" data-category="other">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Newsboxs</h5>
                   <p class="card-text text-dark">Other </p><img class="card-img-bottom" src="assets/img/template/img100.png" alt="Feature" />
                 </div>
               </a></div>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -746,10 +748,11 @@
           </div>
           <div class="container text-center pt-10 z-index-1 pb-3">
             <h1 class="fw-bold text-white fs-5">Ready to get started?</h1>
-            <p class="text-white fw-medium fs-2 mb-6">Get the entire collection in your inbox</p><a class="text-white btn btn-success mb-5"><i class="fas fa-download me-3"></i>Download Free</a>
+            <p class="text-white fw-medium fs-2 mb-6">Get the entire collection in your inbox</p><a class="text-white btn btn-success mb-5" href="https://themewagon.com/themes/template-collection-2022-one-hundred-free-html5-templates-in-one-bundle/" target="_blank"><i class="fas fa-download me-3"></i>Download Free</a>
             <p class="mb-0 text-white mt-6 fs--1">Brought to you with<span class="text-success fas fa-heart mx-1"></span>from<a class="text-decoration-none ms-1 text-white" href="https://themewagon.com/" target="_blank">ThemeWagon</a></p>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
