--- a/showcase/public/index.html
+++ b/showcase/public/index.html
@@ -52,7 +52,7 @@
         <div class="px-0">
           <div class="container text-center z-index-1"><img class="mb-7" src="assets/img/hero/final.png" alt="" />
             <h2 class="text-300 fw-semi-bold fs-2 mb-1">HTML5 Template Collection 2022</h2>
-            <h2 class="text-white fw-bold fs-5 mb-0">100 Pre-build Websites</h2><a class="text-white btn btn-success mt-3 mb-5" href="https://themewagon.com/themes/template-collection-2022-one-hundred-free-html5-templates-in-one-bundle/" target="_blank"><i class="fas fa-download me-3"></i>Download Free</a>
+            <h2 class="text-white fw-bold fs-5 mb-0">100 Pre-built Websites</h2><a class="text-white btn btn-success mt-3 mb-5" href="https://themewagon.com/themes/template-collection-2022-one-hundred-free-html5-templates-in-one-bundle/" target="_blank"><i class="fas fa-download me-3"></i>Download Free</a>
           </div>
           <div class="z-index-1 w-100 position-absolute bottom-0">
             <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1920 141" fill="none">
